--- a/styles/main.css
+++ b/styles/main.css
@@ -1,349 +1,270 @@
-/* reset margin and padding */
+/* the styles for the elements */
 * {
 	margin: 0;
 	padding: 0;
 }
 
-/* the styles for the elements */
-html {
-	background-color: white
+html{
+	background-color: #fff;
 }
+#mobile_menu{
+	display:none;
+}
+
+img{
+	max-width:40%;
+	min-width:150px;
+	height:auto;
+}
+@media only screen and (max-width: 959px) {
+
+	aside h1 {font-size:135%;}
+	aside h1, section h2 {font-size:120%;}
+
+
+}
+@media only screen and (max-width:767px){
+	header img{float:none; max-width:}
+	header {text-align:center;}
+	section{
+		float:none;
+		padding-right:2.5%;
+		width:95%;
+	}
+	aside{
+		float:none;
+		width:95%;
+	}
+	article img{max-width:30%;}
+	section div{
+		-moz-column-count: 2;
+		-webkit-column-count: 2;
+		column-count:2;
+
+	}
+	#nav_menu{
+		display:none;
+	}
+	#mobile_menu{
+		display:block;
+	}
+	.slicknav_menu{
+		background-color:#800000 !important;
+	}
+}
+
+@media only screen and(max-width:479px){
+	body{font-size:90%}
+}
+
 
 body {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 100%;
-	clear: left;
+	max-width:960px;
 	width: 99%;
-	max-width: 960px;
 	margin: 0 auto;
-	border: 3px solid #931420;
+	border: #931420 solid 3px;
 	background-color: #fffded;
+
 }
 
-.logo{
-	float: left;
-	margin-right: 1em;
-	padding-right: 0.105%;
-	padding-left: 0.105%;
-}
 
-a:hover, a:focus {
-	font-style: italic;
-}
-
-/* the styles for the header */
-header {
-	border-bottom: 3px solid #931420;
+header{
+	border-bottom: #931420 solid 3px;
 	padding-top: 1.5em;
 	padding-bottom: 2em;
-	padding-left: 1em;
-	background-image: linear-gradient(30deg, #f6bb73 0%, #f6bb73 30%, white 50%, #f6bb73 80%, #f6bb73 100%);
+	background-image: -webkit-linear-gradient(65deg, #f6bb73 0%, #f6bb73 30%, white 50%, #f6bb73 80%,
+	#f6bb73 100%);
+}
+section {
+	width:34.375%;
+	float:right;
+	padding:0 20px 20px;
+	background:#fff;
+}
+aside{
+	width:59.375%;
+	padding-bottom:20px;
+	padding-left:20px;
+	background:#fff;
+	float:right;
+}
+aside.img{
+	padding-bottom:1em;
+}
+article{
+	padding:0.5em 0 0.5em;
+	border-top:2px solid #800000;
+	border-bottom:2px solid #800000;
+	float:left;
+}
+article.img{
+	float:right;
+	margin:0 0 0;
+	border:1px solid black;
+
+}
+article.p{
+	float:left;
+}
+h1{
+	font-size:150%;
+	padding-top:.25em;
+	margin:0 0 0 0;
+	float:left;
+}
+article.h2{
+	font-size:130%;
+	padding:0;
+	float:left;
+}
+article.h3{
+	font-size:105%;
+	padding-bottom:.25em;
+	float:left;
 }
 
+
+/* the styles for the header */
 header img {
 	float: left;
-	padding: 0 30px;
+	padding-right: 30px;
+	padding-left: 30px;
 }
 
-header h2 {
+header h2{
 	font-size: 170%;
 	color: #800000;
 }
 
-header h3 {
-	font-size: 130%;
+header h3{
+	font-size: 105%;
 	font-style: italic;
+
+}
+header img{
+	float:left;
+	padding:0 3.75%;
 }
 
-header .shadow {
-	text-shadow: 2px 2px 3px #800000;
+header .shadow{
+	text-shadow: 2px 2px #800000;
 }
-
-#nav_menu ul{
+/* the styles for the navigation menu */
+nav {
+	width: 100%;
+}
+#nav_menu ul {
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
 	position: relative;
 }
-
-#nav_menu ul li{
-	width: 20%;
+#nav_menu ul li {
 	float: left;
+	width: 20%;
 }
-
-#nav_menu ul ul{
-	display: none;
-	position: absolute;
-	top: 100%;
-}
-
-#nav_menu ul li a{
+#nav_menu ul li a {
 	display: block;
-	width: 13.334%;
-	padding: 1em 1em;
+	/*width: 160px;*/
+	border: silver 3px;
+	width: 100%;
+	text-align: center;
+	padding: 1em 0;
 	text-decoration: none;
 	background-color: #800000;
 	color: white;
 	font-weight: bold;
 }
-
-#nav_menu ul li a.current{
+#nav_menu a.current {
 	color: yellow;
 }
-
-#nav_menu ul ul li{
-	float: none;
-	width: 13.334%;
-}
-
-#nav_menu li{
-	float: left;
-	list-style-type: none;
-	width: 13.334%;
-}
-
-#nav_menu a{
-	display: block;
-	alignment: center;
-	padding-top: 1em;
-	padding-bottom: 1em;
-	text-decoration: none;
-	background-color: #800000;
-	color: white;
-	font-weight: bold;
-}
-
-#nav_menu li{
-	text-align: center;
-}
-
-#nav_menu .current{
-	color: yellow !important;
-}
-
-#nav_menu li ul{
-	visibility: hidden;
+#nav_menu ul ul {
+	display: none;
 	position: absolute;
-}
 
-#nav_menu li:hover > ul, #nav_menu li ul:hover{
-	visibility: visible;
+}
+#nav_menu ul ul li {
+	float: none;
+}
+#nav_menu ul li:hover > ul {
 	display: block;
 }
-
-#nav_menu ul li:hover > ul{
-	display: block;
-}
-
-#nav_menu > ul:after{
-	content: "";
-	display: block;
-	clear: both;
-}
-
-.ticket{
-	list-style-type: circle;
-}
-
-#nav_menu li ul li{
-	clear: both;
-}
-
-#nav_menu li ul ::after{
+#nav_menu > ul::after {
 	content: "";
 	clear: both;
 	display: block;
 }
+.current{
+	color:yellow;
+}
 
-
-/* the styles for the main section */
+/* the styles for the section */
 main {
 	clear: left;
-	padding: 0;
 }
 
-/* section styles */
-section {
-	width: 58.6875%;
-	float: right;
-	padding-bottom: 20px;
-	padding-right: 2.84%;
-	padding-left: 2.84%;
+main h1{
+	border-bottom:2px solid #800000;
+
 }
 
-section h2 {
+main h2{
 	font-size: 130%;
 	color: #800000;
-	padding: .5em 0 .25em;
-}
-
-section h3{
-	font-size: 105%;
+	padding-top: 0.5em;
 	padding-bottom: 0.25em;
 }
 
-section p {
-	padding-bottom: .5em;
+main h3{
+	font-size: 105%;
+	padding-top: 0.25em;
+	padding-bottom: 0.25em;
 }
 
-section blockquote {
-	padding: 0 2em;
+main a:focus{
 	font-style: italic;
 }
 
-section h1 {
-	font-size: 150%;
-	padding-top: .5em;
-	padding-bottom: .25em;
-	margin: 0;
+main a:hover{
+	font-style: italic;
 }
 
-section ul {
-	padding-bottom: .25em;
-	padding-left: 1.25em;
-}
-
-section li {
-	padding-bottom: .35em;
-}
-
-/* article styling */
-article {
-	padding-top: 0.5em;
+main img{
 	padding-bottom: 0.5em;
-	border-top: 2px solid #800000;
-	border-bottom: 2px solid #800000;
 }
 
-article h2 {
-	padding-top: 0;
+main p{
+	padding-bottom: 0.5em;
 }
 
-article h3 {
-	font-size: 105%;
-	padding-bottom: .25em;
+main blockquote{
+	padding-right: 2em;
+	padding-left: 2em;
+	font-style: italic;
 }
 
-article img {
-	float: right;
-	margin: 1em;
-	border: 1px solid #000;
-	max-width: 40%;
-	min-width: 150px;
+main ul{
+	padding-left: 1.25em;
+	padding-bottom: 0.25em;
 }
 
-/* aside styles */
-aside {
-	width: 22.3959%;
-	padding-left: 20px;
-	padding-right: 20px;
-	float: right;
+main li{
+	padding-bottom: 0.35em;
 }
 
-aside h2 {
-	font-size: 130%;
-	color: #800000;
-	padding: .5em 0 .25em;
-}
 
-aside h3 {
-	font-size: 105%;
-	padding-bottom: .25em;
-}
-
-aside img {
-	padding-bottom: 1em;
-	padding-top: 1em;
-}
-
-ul.ticket{
-	list-style-type: circle;
-}
-
-/*media query for the screen type that checks that the viewport width is 959px or less*/
-@media only screen and (max-width: 959px) {
-	section h1{
-		font-size: 135%;
-	}
-	section h2{
-		font-size: 120%;
-	}
-
-}
-
-/* mobile query for a phone in landscape orientation*/
-@media only screen and (max-width: 767px){
-	header img{
-		float: none;
-	}
-	header{
-		text-align: center;
-	}
-	section{
-		float: none;
-		width: 94.32%;
-	}
-	article img{
-		max-width: 30%;
-	}
-	aside{
-		float: none;
-		padding-right: 2.84%;
-		width: 94.32%;
-	}
-	article img{
-		max-width: 30%;
-	}
-	aside div{
-		-moz-column-count: 2;
-		-webkit-column-count: 2;
-		column-count: 2;
-	}
-}
-
-/* mobile query for a phone in landscape orientation*/
-@media only screen and (max-width: 479px) {
-	body{
-		font-size: 90%;
-	}
-}
-
-@media only screen and (max-width: 767px) {
-	.Js #nav_menu{
-		display: none;
-	}
-	.Js .slicknav_menu{
-		display: block;
-	}
-	.slicknav_menu{
-		background-color: #800000;
-	}
-}
-
-@media only screen and (max-width: 767px){
-	.Js #nav_menu{
-		display: none;
-	}
-	.Js .slicknav_menu{
-		display: block;
-	}
-	.slicknav_menu{
-		background-color: #800000 !important;
-	}
-}
-
-.slicknav_menu{
-	display: none;
-}
 
 /* the styles for the footer */
-footer {
-	clear: both;
+footer{
 	background-color: #931420;
+	clear:both;
 }
 
-footer p {
-	color: #fff;
+footer p{
 	text-align: center;
-	padding: 1em 0;
+	color: white;
+	padding-top: 1em;
+	padding-bottom: 1em;
 }
