--- a/styles/main.css
+++ b/styles/main.css
@@ -1,16 +1,18 @@
-/* the styles for the elements */
+/* reset margin and padding */
 * {
 	margin: 0;
 	padding: 0;
 }
 
+/* the styles for the elements */
 html {
-	background-color: white;
+	background-color: white
 }
 
 body {
 	font-family: Arial, Helvetica, sans-serif;
-    font-size: 100%;
+	font-size: 100%;
+	clear: left;
 	width: 99%;
 	max-width: 960px;
 	margin: 0 auto;
@@ -18,30 +20,15 @@ body {
 	background-color: #fffded;
 }
 
-section {
-	width: 65.625%;
-	float: right;
-	padding-left: 2.5px;
-	padding-right: 2.5px;
-	padding-bottom: 20px;
+.logo{
+	float: left;
+	margin-right: 1em;
+	padding-right: 0.105%;
+	padding-left: 0.105%;
 }
 
-aside {
-	width: 26.875%;
-	float: right;
-	padding-left: 2.5%;
-	padding-bottom: 20px;
-}
-
-h1 {
-	font-size: 150%;
-	padding-top: 0.5em;
-	padding-bottom: 0.25em;
-	margin: 0;
-}
-
-.shadow {
-	text-shadow: 2px 2px 9px #800000 ;
+a:hover, a:focus {
+	font-style: italic;
 }
 
 /* the styles for the header */
@@ -49,149 +36,184 @@ header {
 	border-bottom: 3px solid #931420;
 	padding-top: 1.5em;
 	padding-bottom: 2em;
-	background:linear-gradient(30deg, #f6bb73 0%, white 30%, white 50%, white 80%, #f6bb73 100%)
+	padding-left: 1em;
+	background-image: linear-gradient(30deg, #f6bb73 0%, #f6bb73 30%, white 50%, #f6bb73 80%, #f6bb73 100%);
 }
 
-header h2{
+header img {
+	float: left;
+	padding: 0 30px;
+}
+
+header h2 {
 	font-size: 170%;
 	color: #800000;
 }
 
 header h3 {
-	font-size:130%;
+	font-size: 130%;
 	font-style: italic;
 }
 
-header img {
-	float: left;
-	padding-right: 3.75%;
-	padding-left: 3.75%;
+header .shadow {
+	text-shadow: 2px 2px 3px #800000;
 }
 
-/* Styles for the nav menu */
-#nav_menu ul {
-	list-style: none;
+#nav_menu ul{
+	list-style-type: none;
 	margin: 0;
 	padding: 0;
 	position: relative;
 }
 
-#nav_menu ul li {
+#nav_menu ul li{
+	width: 13.334%;
 	float: left;
-	width: 20%;
 }
 
-#nav_menu ul li:hover {
-	font-style: italic;
+#nav_menu ul ul{
+	display: none;
+	position: absolute;
+	top: 100%;
 }
 
-#nav_menu ul li a {
+#nav_menu ul li a{
 	display: block;
-	text-align: center;
-	padding: 1em 0;
+	width: 13.334%;
+	padding: 1em 1em;
 	text-decoration: none;
 	background-color: #800000;
 	color: white;
 	font-weight: bold;
 }
 
-#nav_menu ul ul {
-	width: 100%;
-    display: none;
-    position: absolute;
-    top: 100%;
-}
-
-#nav_menu ul ul li {
-	float: none;
-}
-
-#nav_menu ul li:hover > ul {
-	display: block;
-	font-style: normal;
-}
-
-#nav_menu > ul::after {
-    content: "";
-    clear: both;
-    display: block;
-	font-style:none;
-}
-
-#nav_menu a.current {
+#nav_menu ul li a.current{
 	color: yellow;
 }
 
-/* the styles for the section */
+#nav_menu ul ul li{
+	float: none;
+	width: 13.334%;
+}
+
+#nav_menu li{
+	float: left;
+	list-style-type: none;
+	width: 13.334%;
+}
+
+#nav_menu a{
+	display: block;
+	width: 13.334%;
+	alignment: center;
+	padding-top: 1em;
+	padding-bottom: 1em;
+	text-decoration: none;
+	background-color: #800000;
+	color: white;
+	font-weight: bold;
+}
+
+#nav_menu li{
+	text-align: center;
+}
+
+#nav_menu .current{
+	color: yellow !important;
+}
+
+#nav_menu li ul{
+	visibility: hidden;
+	position: absolute;
+}
+
+#nav_menu li:hover > ul, #nav_menu li ul:hover{
+	visibility: visible;
+	display: block;
+}
+
+#nav_menu ul li:hover > ul{
+	display: block;
+}
+
+#nav_menu > ul:after{
+	content: "";
+	display: block;
+	clear: both;
+}
+
+.ticket{
+	list-style-type: circle;
+}
+
+#nav_menu li ul li{
+	clear: both;
+}
+
+#nav_menu li ul ::after{
+	content: "";
+	clear: both;
+	display: block;
+}
+
+
+/* the styles for the main section */
 main {
 	clear: left;
+	padding: 0;
+}
+
+/* section styles */
+section {
+	width: 58.6875%;
+	float: right;
+	padding-bottom: 20px;
+	padding-right: 2.84%;
+	padding-left: 2.84%;
 }
 
 section h2 {
 	font-size: 130%;
 	color: #800000;
-	padding-top: 0.5em;
-	padding-bottom:0.25em;
+	padding: .5em 0 .25em;
 }
 
-section ul {
-	list-style-type: circle;
-}
-
-section p {
-	padding-bottom: 0.5em;
-}
-
-section blockquote {
-	padding-right: 2em;
-	padding-left: 2em;
-	font-style: italic;
-}
-
-section ul {
-	padding-bottom: 0.25em;
-	padding-left: 1.25em;
-}
-
-section li {
-	padding-bottom: 0.35em;
-}
-
-aside h2 {
-	font-size: 130%;
-	color: #800000;
-	padding-top: 0.5em;
-	padding-bottom:0.25em;
-}
-
-aside h3 {
+section h3{
 	font-size: 105%;
 	padding-bottom: 0.25em;
 }
 
-aside img {
-	padding-bottom: 1em;
+section p {
+	padding-bottom: .5em;
 }
 
-aside a:hover, a:focus {
+section blockquote {
+	padding: 0 2em;
 	font-style: italic;
 }
 
+section h1 {
+	font-size: 150%;
+	padding-top: .5em;
+	padding-bottom: .25em;
+	margin: 0;
+}
+
+section ul {
+	padding-bottom: .25em;
+	padding-left: 1.25em;
+}
+
+section li {
+	padding-bottom: .35em;
+}
+
+/* article styling */
 article {
 	padding-top: 0.5em;
 	padding-bottom: 0.5em;
 	border-top: 2px solid #800000;
 	border-bottom: 2px solid #800000;
-}
-
-article img {
-	float: right;
-	border: 1px solid black;
-	max-width: 40%;
-	min-width: 150px;
-	margin-left: 1em;
-	margin-right: 1em;
-	margin-bottom: 1em;
 }
 
 article h2 {
@@ -200,66 +222,129 @@ article h2 {
 
 article h3 {
 	font-size: 105%;
-	padding-bottom: 0.25em;
+	padding-bottom: .25em;
 }
 
-/* the styles for the footer */
-footer {
-	background-color: #931420;
-	clear: both;
+article img {
+	float: right;
+	margin: 1em;
+	border: 1px solid #000;
+	max-width: 40%;
+	min-width: 150px;
 }
 
-footer p {
-	text-align: center;
-	color: white;
-	padding-top: 1em;
+/* aside styles */
+aside {
+	width: 22.3959%;
+	padding-left: 20px;
+	padding-right: 20px;
+	float: right;
+}
+
+aside h2 {
+	font-size: 130%;
+	color: #800000;
+	padding: .5em 0 .25em;
+}
+
+aside h3 {
+	font-size: 105%;
+	padding-bottom: .25em;
+}
+
+aside img {
 	padding-bottom: 1em;
+	padding-top: 1em;
 }
 
-/* Mobile Menu Styles */
-#mobile_menu {
-	display: none;
+ul.ticket{
+	list-style-type: circle;
 }
 
-/* Media Queries */
-
-/* Tablet portrait Desktop */
+/*media query for the screen type that checks that the viewport width is 959px or less*/
 @media only screen and (max-width: 959px) {
-	section h1 { font-size: 135%; }
-	section h2, aside h2 { font-size: 120%; }
+	section h1{
+		font-size: 135%;
+	}
+	section h2{
+		font-size: 120%;
+	}
+
 }
 
-/* Mobile landscaope to tablet portrait  */
-@media only screen and (max-width: 767px) {
-	header img { float: none; max-width:}
-	header { text-align: center; }
-	aside {
+/* mobile query for a phone in landscape orientation*/
+@media only screen and (max-width: 767px){
+	header img{
 		float: none;
-		padding-right: 2.5%;
-		width: 95%;
 	}
-	section {
+	header{
+		text-align: center;
+	}
+	section{
 		float: none;
-		width: 95%;
+		width: 94.32%;
 	}
-	article img { max-width: 30%; }
-	aside div {
+	article img{
+		max-width: 30%;
+	}
+	aside{
+		float: none;
+		padding-right: 2.84%;
+		width: 94.32%;
+	}
+	article img{
+		max-width: 30%;
+	}
+	aside div{
 		-moz-column-count: 2;
 		-webkit-column-count: 2;
 		column-count: 2;
 	}
-	#nav_menu {
+}
+
+/* mobile query for a phone in landscape orientation*/
+@media only screen and (max-width: 479px) {
+	body{
+		font-size: 90%;
+	}
+}
+
+@media only screen and (max-width: 767px) {
+	.Js #nav_menu{
 		display: none;
 	}
-	#mobile_menu {
+	.Js .slicknav_menu{
 		display: block;
 	}
-	.slicknav_menu {
+	.slicknav_menu{
+		background-color: #800000;
+	}
+}
+
+@media only screen and (max-width: 767px){
+	.Js #nav_menu{
+		display: none;
+	}
+	.Js .slicknav_menu{
+		display: block;
+	}
+	.slicknav_menu{
 		background-color: #800000 !important;
 	}
 }
 
-/* Mobile portrait */
-@media only screen and(max-width: 479px) {
-	body { font-size: 90%;}
+.slicknav_menu{
+	display: none;
+}
+
+/* the styles for the footer */
+footer {
+	clear: both;
+	background-color: #931420;
+}
+
+footer p {
+	color: #fff;
+	text-align: center;
+	padding: 1em 0;
 }
